[package]
name = "feed2block"
version = "0.1.0"
edition = "2021"

# [[bin]]
# name = "main"
# path = "main.rs"

[[bin]]
name = "auth"
path = "src/auth.rs"

[dependencies]
async-stream = "0.3.6"
atrium-api = "0.24.8"
atrium-xrpc-client = "0.5.10"
bsky-sdk = "0.1.13"
clap = { version = "4.5.21", features = ["derive"] }
env_logger = "0.11.5"
futures-core = "0.3.31"
futures-util = "0.3.31"
ipld-core = "0.4.1"
reqwest = "0.12.9"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
tower = { version = "0.5.1", features = ["limit"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
